# bigid-home-task

./: .env  .env.docker-network  .gitignore  Dockerfile  README.md  bigid.db  docker-compose.yml  pyproject.toml
app/: __init__.py  consts.py  logger.py  main.py  types.py  utils.py
app/db/: database.py  models.py  schemas.py
app/db/crud/: __init__.py  articles.py  comments.py  users.py
app/routers/: articles.py  comments.py  tasks.py  users.py
app/text_proccesors/: celery.py  find_words.py  most_common_word.py
app/words_cache/: words_cache.py
documents/: thoughts.pages
resources/: thoughts.pages
tests/text_proccesors/: test_find_words.py
